fixed img size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,10 @@ button {
 /* Smartphones (portrait and landscape) -----------*/
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 /* Styles */
+
+img {
+  max-width: 250px;
+}
 }
 
 /* Smartphones (landscape) ----------- */
